Added Allure report generation to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,22 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: 🧪 Run API Tests with Pytest
+    - name: 🧪 Run API Tests with Pytest + Allure
       run: |
-        pytest --maxfail=1 --disable-warnings -v
+        pytest --maxfail=1 --disable-warnings -v --alluredir=allure-results
+
+    - name: 📥 Install Allure Commandline
+      run: |
+        sudo apt-add-repository ppa:qameta/allure -y
+        sudo apt-get update
+        sudo apt-get install allure -y
+
+    - name: 🔧 Generate Allure Report
+      run: |
+        allure generate allure-results -o allure-report --clean
+
+    - name: 📤 Upload Allure Report Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: allure-report
+        path: allure-report
