--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,31 +12,36 @@ jobs:
 
     steps:
     - name: 📥 Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: 🐍 Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.11
 
+
     - name: 🔧 Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: 🧪 Run Pytest with Allure
+      run: |
+        pytest --maxfail=1 --disable-warnings -v --alluredir=allure-results
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '16'
 
-    - name: 📥 Install Allure Commandline
+    - name: 📥 Install Allure CLI
       run: npm install -g allure-commandline --save-dev
 
     - name: 🔧 Generate Allure Report
       run: allure generate allure-results -o allure-report --clean
 
     - name: 📤 Upload Allure Report Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: allure-report
         path: allure-report
